Fixed Blog Overlap

--- a/src/components/BlogDisp/BlogDisp.css
+++ b/src/components/BlogDisp/BlogDisp.css
@@ -3,4 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-items: center;
+    width: 100%;
+    max-height: 90vh; /* Adjust this value as needed */
+    overflow: auto;
 }
